tests/reject/tinc.nim
var x = 0

inc(x+1)


